new approach to translations

--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,7 @@
     <!-- Skip to main content link for accessibility -->
      <header>
       <div class="flex w-full justify-start md:justify-center md:col-start-2 items-center md:mx-auto" id="skiplink-container">
-          <a href="#main-content" class="skiplink px-2 py-2" data-i18n="skip_to_main_content">Skip to main content</a>
+          <a href="#main-content" class="skiplink px-2 py-2">Skip to main content</a>
       </div>
       <!--Nav-->
       <nav id="header" class="bg-white" aria-labelledby="site-title">
@@ -63,8 +63,7 @@
           <div class="flex gap-gutterHalf w-full items-center">
             <img
               src="/assets/fip-en.svg"
-              alt=""
-              data-i18n="fip_logo fip_logo_alt"
+              alt="Government of Canada"
             />
           </div>
 
@@ -74,8 +73,8 @@
             data-testid="lang_button"
             type="button"
           >
-            <span class="text-base sm:hidden" data-i18n="lang_abbr">FR</span
-            ><span class="sr-only sm:not-sr-only" data-i18n="lang_button"
+            <span class="text-base sm:hidden">FR</span
+            ><span class="sr-only sm:not-sr-only"
               >Français</span
             >
           </button>
@@ -89,7 +88,7 @@
         >
           <div class="flex gap-gutterHalf w-full items-start">
             <img class="size-7" src="/assets/notify.svg" alt="" />
-            <h1 id="site-title" class="text-xl/7 font-heading font-[375]" data-i18n="site_title">
+            <h1 id="site-title" class="text-xl/7 font-heading font-[375]">
               GC Notify System Status
             </h1>
           </div>
@@ -107,7 +106,6 @@
       <section class="" data-testid="main_section" aria-label="system status">
         <div class="container mx-auto px-gutterHalf py-gutterAndAHalf">
           <h2
-            data-i18n="incident_history_title"
             class="text-5xl font-heading leading-tight text-black dark:text-white"
           >
             Incidents and service interruptions
@@ -186,7 +184,7 @@
             href="https://notification.canada.ca"
             class="text-blue-200 inline-flex items-center gap-2"
           >
-            <span data-i18n="back_button">Go to GC Notify</span>
+            <span>Go to GC Notify</span>
           </a>
         </div>
       </section>
@@ -195,14 +193,13 @@
       <div
         class="container mx-auto px-gutterHalf py-gutterAndAHalf flex gap-gutter items-end lg:items-center justify-between"
       >
-        <nav aria-label="Legal information" data-i18n="legal_label">
+        <nav aria-label="Legal information">
           <ul
             class="text-base leading-8 [&_a]:text-black [&_svg]:hidden md:[&_svg]:inline md:[&_svg]:mx-gutterHalf flex flex-col md:flex-row flex-wrap gap-gutterHalf md:gap-0 md:items-center"
           >
             <li>
               <a
                 href="https://notification.canada.ca/privacy"
-                data-i18n="privacy privacy_href"
                 >Privacy</a
               >
               <svg
@@ -221,7 +218,6 @@
             <li>
               <a
                 href="https://notification.canada.ca/security"
-                data-i18n="security security_href"
                 >Security</a
               >
               <svg
@@ -240,7 +236,6 @@
             <li>
               <a
                 href="https://notification.canada.ca/accessibility"
-                data-i18n="a11y a11y_href"
                 >Accessibility</a
               >
               <svg
@@ -259,7 +254,6 @@
             <li>
               <a
                 href="https://notification.canada.ca/terms"
-                data-i18n="terms terms_href"
                 >Terms of use</a
               >
               <svg
@@ -278,7 +272,6 @@
             <li>
               <a
                 href="https://notification.canada.ca/service-level-agreement"
-                data-i18n="sla sla_href"
                 >Service level agreement</a
               >
             </li>
@@ -287,7 +280,6 @@
         <img
           src="/assets/fip-wordmark.svg"
           alt="Symbol of the Government of Canada"
-          data-i18n="wordmark_alt"
         />
       </div>
     </footer>
